src/main/kotlin/com/example/msproduct/errors/GlobalErrorHandler.kt
package com.example.msproduct.errors

import org.springframework.http.HttpHeaders
import org.springframework.http.HttpStatus
import org.springframework.http.HttpStatusCode
import org.springframework.http.ResponseEntity
import org.springframework.stereotype.Component
import org.springframework.web.HttpRequestMethodNotSupportedException
import org.springframework.web.bind.annotation.ControllerAdvice
import org.springframework.web.bind.annotation.ExceptionHandler
import org.springframework.web.context.request.WebRequest
import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler

@Component
@ControllerAdvice
class GlobalErrorHandler : ResponseEntityExceptionHandler() {

    @ExceptionHandler(EntityNotFoundException::class)
    fun handleEntityNotFoundException(ex : EntityNotFoundException) : ResponseEntity<ErrorCustomized> {
        return ResponseEntity.status(HttpStatus.NOT_FOUND)
                             .body(ErrorCustomized().apply{
                                 code = HttpStatus.NOT_FOUND
                                 message = ex.message
                             })
    }
    
}